EuroCarsUSA/wwwroot/css/site.css
html {
    font-size: 14px;
}

label{
    color: black;
)
}

@media (min-width: 576px) {
    html {
        font-size: 16px;
    }
}


.fh-regular {
    font-size: 14px;
    font-family: "Roboto"
}
.fh-header {
    font-size: 24px;
    font-family: "Roboto"
}

.fh-header-bold {
    font-size: 24px;
    font-family: "Roboto";
    font-weight: 700;
}

.fh-filter-text {
    font-size: 16px;
    font-family: "Roboto"
}

.fh-title-subhead {
    font-size: 20px;
    font-family: "Roboto"
}

.fh-button-text {
    font-size: 14px;
    font-family: "Roboto"
}

.fh-card-title {
    font-size: 16px;
    font-family: "Roboto"
}

.fh-card-header {
    font-size: 16px;
    font-family: "Roboto"
}

.fh-card-subhead {
    font-size: 14px;
    font-family: "Roboto"
}


.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
}

html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 60px;
}

select {
    background-color: var(--bs-light);
    color: var(--bs-primary);
}

.fas.fa-phone {
    font-size: 0.75em; /* Adjust as needed */
    position: relative;
    bottom: 1px;
    right: 5px;
}

#filters {
    width: fit-content;
}



.center-items {
    display: grid;
    place-items: center;
}

.btn-secondary{
    border: 1px solid var(--bs-primary);
}
.border-bottom-only {
    border: none;
    border-bottom: 1px solid;
    background-color: var(--bs-secondary);
}

.border-bottom-only:focus {
    outline: none;
}
    /* Change placeholder color */
    .border-bottom-only::placeholder { /* Most modern browsers */
        color: var(--bs-primary);
    }

    .border-bottom-only::-webkit-input-placeholder { /* WebKit browsers */
        color: var(--bs-primary);
    }

    .border-bottom-only::-moz-placeholder { /* Mozilla Firefox 19+ */
        color: var(--bs-primary);
        opacity: 1; /* Firefox has reduced opacity on placeholders by default */
    }

    .border-bottom-only:-ms-input-placeholder { /* Internet Explorer 10-11 */
        color: var(--bs-primary);
    }

    .border-bottom-only:-moz-placeholder { /* Mozilla Firefox 4-18 */
        color: var(--bs-primary);
        opacity: 1; /* Firefox has reduced opacity on placeholders by default */
    }



.rounded-xxl{
    border-radius: 5%;
}

img.rounded-xxl {
    border-radius: 4%;
}

.img-container {
    position: relative;
    
    padding-bottom: 56.25%; /* 9 / 16 * 100 = 56.25% */
    overflow: hidden;
}

    .img-container img {
        position: absolute;
        top: 0;
        left: 0;
        
        height: 100%;
        object-fit: cover;
    }


.card:hover {
    border: 1px solid var(--bs-primary);
    box-shadow: 0 0 10px var(--bs-primary);
    transform: scale(1.05);
}



.w-15 {
    width: 15% !important
}

.slick-slide {
    width: auto !important;
}

    .slick-slide img {
        height: 20vh; /* 20% of the viewport height */
        object-fit: cover;
    }

.slider-container {
    height: 20vh; /* 25% of the viewport height */
}

#imageMain img {
    height: 50vh; /* Adjust this value to your needs */
    width: 100%;
    object-fit: cover;
}



div.carPhotoThumbnailSelected {
    border: 3px solid var(--bs-primary);
    box-sizing: border-box;
}

.btn-arrow{
    flex: 1;
}

.carIcon {
    height: 1em;
    width: 1em;
    vertical-align: middle;
}


.filterIcon {
    height: 1.5em;
    width: 1.5em;
    vertical-align: middle;
}
.arrow-container {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    pointer-events: none; /* This allows clicks to pass through to the image */
}


#leftArrowButton, #rightArrowButton {
    position: static; /* Remove the absolute positioning */
    pointer-events: auto; /* This allows the arrows to be clickable */
}



.galleryIcon {
    height: 5em;
    width: 5em;
    vertical-align: middle;
    z-index: 1000;
    transition: transform 0.1s ease-in-out;
}
    .galleryIcon:hover {
        transform: scale(1.2);
    }

@media only screen and (max-width: 576px) {
    html {
        font-size: 16px;
        /*font-size: calc(1em + 1vw);*/
    }
}



@media (max-width: 767px) {
    .filters-desktop {
        display: none !important;
    }
    #filters-mobile-list {
        box-sizing: border-box;

        position: fixed;
        top: 0;
        right: -100%; /* Start off the screen (to the right) */
        width: 98%; /* Use 80% of the screen width */
        height: 100%; /* Use 100% of the screen height */
        overflow: auto; /* Add scroll if content is larger than screen */
        transition: right 0.3s ease-in-out; /* Animate the right property */
        z-index: 1; /* Make sure it appears on top of other content */
        background-color: #fff; /* Add a background color */
    }

        /* When the filters panel has the 'open' class, slide it in */
        #filters-mobile-list.open {
            right: 0;
        }
}

@media (min-width: 768px) {
    .filters-mobile {
        display: none;
    }
    
}

.row-mobile-filter{
    height: 4em;
}

.text-ellipsis {
    margin-bottom: 0px;
    white-space: nowrap;      /* Prevents the text from wrapping onto the next line */
    overflow: hidden;         /* Hides the text that overflows the container */
    text-overflow: ellipsis;  /* Adds the ... at the end when the text overflows */
    font-size: 15px;
}

.mobile-filter-select-screen {
    position: fixed;
    top: 0;
    right: -100%;
    width: 100%;
    height: 100%;
    background: white;
    transition: right 0.3s ease-in-out;
    overflow-y: auto;
    padding: 20px;
    z-index: 2;
}
    .mobile-filter-select-screen.open {
        right: 0;
    }


.mobile-list-item {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 10px;
    border-bottom: 1px solid #ccc;
}

    .mobile-list-item label {
        margin-right: 10px;
    }
button#mobile-filter-select-save-button .carIcon {
    fill: white;
}
/textarea{
    resize: none;
}


/* to rename classes */
@media (max-width: 767px) {
    .row.mb-md-3 > .col-md-6:nth-child(odd) {
        background-color: var(--bs-secondary);
    }
}

.sticky-footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 64px;
    background-color: #333; /* Цвет фона прямоугольника */
    color: #fff; /* Цвет текста в прямоугольнике */
    padding: 0px; /* Отступы внутри прямоугольника */
}

.bg-byzantine {
    background-color: #bd33a4
}
.text-antique {
    color: #FAEBD7
}

.br-0 {
    border-radius: 0
}

.br-1 {
    border-radius: .25rem
}
.br-2 {
    border-radius: 8px
}

.br-3 {
    border-radius: 1rem
}
.br-4 {
    border-radius: 1.5rem
}

.br-5 {
    border-radius: 3rem
}

.text-primary {
    color: var(--bs-primary)
}

.text-secondary {
    color: var(--bs-secondary)
}

.text-subhead {
    color: var(--bs-subhead);
    color: #49454F
}


.dropdown-toggle {
    background-color: #f8f9fa;
    border: 1px solid #ced4da;
    color: var(--bs-primary);

}
    .dropdown-toggle:hover {
        background-color: #f8f9fa;
        border: 1px solid #ced4da;
        color: var(--bs-primary);
    }
.dropdown-item input[type='checkbox'] {
    width: 14px;
    height: 14px;
}

.dropdown-item {
    font-size: 16px;
}

